add more routing to app.rb

--- a/views/stylist_edit.erb
+++ b/views/stylist_edit.erb
@@ -7,9 +7,9 @@
     <input id="name" name="name" type="text">
   <div>
   <div class="form_group">
-  <label for="station">Station:</label>
-  <input id="station" name="station" type="text">
-</div>
+    <label for="station">Station:</label>
+    <input name="station" type="text">
+  </div>
   <button type="submit">Update</button>
 </form>
 
