--- a/views/stylist_form.erb
+++ b/views/stylist_form.erb
@@ -1,3 +1,5 @@
+<h1> Please enter the new stylist's info:</h1>
+
 <form action="/stylists" method="post">
   <div class="form-group">
     <label for="name">Stylist Name:</label>
@@ -7,5 +9,5 @@
     <label for="station">Station:</label>
     <input type="text" name="station">
   </div>
-  <button type="submit" name="submit">Add Stylist</button>
+  <button type="submit">Add Stylist</button>
 </form>
