--- a/views/stylist_edit.erb
+++ b/views/stylist_edit.erb
@@ -4,17 +4,21 @@
   <input name="_method" type="hidden" value="patch">
   <div class="form-group">
     <label for="name">Stylist Name:</label>
-    <input id="name" name="name" type="text">
+    <input type = "text" name="name" id="name">
   <div>
   <div class="form_group">
     <label for="station">Station:</label>
-    <input name="station" type="text">
+    <input type="text" name="station" id="station">
   </div>
-  <button type="submit">Update</button>
+  <br><button type="submit">Update</button><br>
+
 </form>
+<br>
 
 <form action="/stylists/<%= @stylist.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
 
   <button type="submit">Delete this stylist</button>
 </form>
+<br>
+<a href="/stylists">Back to Manage Stylists</a>
