--- a/views/client_edit.erb
+++ b/views/client_edit.erb
@@ -1,4 +1,4 @@
-<h1>Update <%=@client.name() %>'s Information </h1>
+<h1>Update <%= @client.name() %>'s Information </h1>
 
 <form action="/clients/<%= @client.id() %>" method="post">
   <input name="_method" type="hidden" value="patch">
@@ -18,16 +18,18 @@
 </form>
 <br>
 
-<h1>Assign <%=@client.name() %> to a Stylist </h1>
+<h1>Assign <%= @client.name() %> to a Stylist </h1>
+
 <% if @stylists.any?() %>
-<form action="/clients/assign" method="post">
-<input id = "id" name="id" type="hidden" value="<%= @client.id()%>">
-   <select class="stylists" name="stylists">
+<form action="/clients/<%= @client.id() %>/assign" method="post">
+<input name="_method" type="hidden" value="patch">
+  <label for="stylists">Choose a stylist></label>
+  <select id="stylists" name="stylists" type = "text">
      <% @stylists.each do |stylist| %>
-       <option value="<%= stylist.id %>"><%= stylist.name %></option>
+       <option value="<%= stylist.id() %>"><%= stylist.name() %></option>
      <% end %>
    </select>
-   <button type="submit" name="assign_stylist" class="btn-sm">Assign Stylist</button>
+   <button type="submit" class="btn-sm">Assign Stylist</button>
 </form>
 <% else %>
 <p> There are no stylists to assign to this client!</p>
