--- a/views/client_edit.erb
+++ b/views/client_edit.erb
@@ -14,32 +14,23 @@
     <label for="email">Email:</label>
     <input type = "text" name="email" id="email">
   <div>
+
+    <label for="stylist_id">Choose a Stylist:</label>
+    <select id="stylist_id" name="stylist_id" type="text">
+      <% @stylists.each() do |stylist| %>
+      <option value="<%= stylist.id() %>"><%= stylist.name %></option>
+      <% end %>
+    </select>
+    
   <br><button type="submit">Update</button><br>
 </form>
 <br>
 
-<h1>Assign <%= @client.name() %> to a Stylist </h1>
-
-<% if @stylists.any?() %>
-<form action="/clients/<%= @client.id() %>/assign" method="post">
-<input name="_method" type="hidden" value="patch">
-  <label for="stylists">Choose a stylist></label>
-  <select id="stylists" name="stylists" type = "text">
-     <% @stylists.each do |stylist| %>
-       <option value="<%= stylist.id() %>"><%= stylist.name() %></option>
-     <% end %>
-   </select>
-   <button type="submit" class="btn-sm">Assign Stylist</button>
-</form>
-<% else %>
-<p> There are no stylists to assign to this client!</p>
-<% end %>
-
-<h1>Delete <%=@client.name() %></h1>
+<h1>Delete <%= @client.name() %></h1>
 <form action="/clients/<%= @client.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
-
-  <button type="submit">Delete this client</button>
+  <button type="submit">Delete Client</button>
 </form>
+
 <br>
 <a href="/clients">Back to Manage Clients</a>
