--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,10 @@
-<h1> Salon Dashboard</h1>
-
-<button type="button" name="stylists"><a href="/stylists" id="stylists">Manage Stylists</a></button>
-<br>
-<button type="button" name="clients"><a href="/clients" id="clients">Manage Clients</a></button>
+<div class="container">
+  <div class="col-md-6">
+    <a href="/stylists" id="stylists"><img class="photo" src="img/stylist.jpg" alt="a photo of a hair stylist"></a>
+    <h2>Manage Stylists</h2>
+  </div>
+  <div class="col-md-6">
+    <a href="/clients" id="stylists"><img class="photo" src="img/client.jpg" alt="a photo of a woman with colorful hair"></a>
+    <h2>Manage Clients</h2>
+  </div>
+</div>
