--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <title>Salon Management Tool</title>
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
+    <title>Salon Management System</title>
   </head>
   <body>
     <div class="container">
-      <%= yield %>
+      <div class="jumbotron">
+        <h1>Salon Management System</h1>
+      </div>
+        <%= yield %>
     </div>
   </body>
 </html>
