--- a/views/stylist_form.erb
+++ b/views/stylist_form.erb
@@ -12,4 +12,4 @@
   <button type="submit">Add Stylist</button>
 </form>
 <br>
-<a href="/stylists">Back to Manage Stylists</a>
+<button type='button'><a href="/stylists">Back to Manage Stylists</a></button>
