pass all specs except Client.find_by_stylist_id and integration specs client path, update delete and assign

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     <h2>Manage Stylists</h2>
   </div>
   <div class="col-md-6">
-    <a href="/clients" id="stylists"><img class="photo" src="img/client.jpg" alt="a photo of a woman with colorful hair"></a>
+    <a href="/clients" id="clients"><img class="photo" src="img/client.jpg" alt="a photo of a woman with colorful hair"></a>
     <h2>Manage Clients</h2>
   </div>
 </div>
