fix bugs so all integration specs pass

--- a/views/client.erb
+++ b/views/client.erb
@@ -6,13 +6,18 @@
 
 <h3> Email: <%= @client.email() %> </h3>
 
-<% if @client.stylist_id() %>
-<h3> Stylist:
-    <%= Stylist.find_by_id(@client.stylist_id).name() %> </h3>
+<h3> Stylist:</h3>
+<% if @client.stylist_id() != 0 %>
+  <%= Stylist.find_by_id(@client.stylist_id).name() %> </h3>
 <% else %>
 </h3> No Stylist Assigned Yet </h3>
 <% end %>
+<br><br>
+<button type='button' class="btn btn-large"><a id="edit_delete" href='/clients/<%= @client.id() %>/edit'>Edit Client Info</a></button>
+<br><br>
+<form action="/clients/<%= @client.id() %>/delete" method="post">
+  <input name="_method" type="hidden" value="delete">
+  <button type="submit" class="btn btn-large">Delete Client</button>
+</form>
 
-<button type='button'><a href='/clients/<%= @client.id() %>/edit'>Edit or Delete Client</a></button>
-
-<button type='button'><a href="/clients">Back to Manage Clients</a></button>
+<br><button type='button' class="btn btn-large"><a href="/clients">Back to Manage Clients</a></button>
