--- a/views/stylist.erb
+++ b/views/stylist.erb
@@ -13,6 +13,6 @@
   </ul>
 
 
-<button type='button'><a href='/stylists/<%= @stylist.id() %>/edit'>Edit or Delete</a></button>
+<button type='button' class="btn btn-large"><a href='/stylists/<%= @stylist.id() %>/edit'>Edit or Delete</a></button>
 
-<button type='button'><a href="/stylists">Back to Manage Stylists</a></button>
+<button type='button' class="btn btn-large"><a href="/stylists">Back to Manage Stylists</a></button>
