--- a/views/stylist_form.erb
+++ b/views/stylist_form.erb
@@ -9,7 +9,7 @@
     <label for="station">Station:</label>
     <input type="text" name="station">
   </div>
-  <button type="submit">Add Stylist</button>
+  <button type="submit" class="btn btn-large">Add Stylist</button>
 </form>
 <br>
-<button type='button'><a href="/stylists">Back to Manage Stylists</a></button>
+<button type='button' class="btn btn-large"><a href="/stylists">Back to Manage Stylists</a></button>
