--- a/views/stylists.erb
+++ b/views/stylists.erb
@@ -1,17 +1,17 @@
 <h1> Manage Your Stylists</h1>
 <br>
+<h3> Click on a stylist to see more details</h3>
+
 <% if @stylists.any?() %>
 <ul>
   <% @stylists.each do |stylist| %>
-  <li><%= stylist.name() %>
-    <button type='button'><a href='/stylists/<%= stylist.id() %>'>View Details</a></button>
-  </li><br>
+  <li><a href='/stylists/<%= stylist.id() %>'><%= stylist.name() %></a></li><br>
   <% end %>
 </ul>
 <% else %>
 <h2> You don't have any stylists yet!</h2>
 <% end %>
 
-<button type='button'><a href='/stylists/new'>Add a New Stylist</a></button>
+<button type='button' class="btn btn-large"><a href='/stylists/new'>Add a New Stylist</a></button>
 
-<button type='button'><a href='/'>Back Home</a></button>
+<button type='button' class="btn btn-large"><a href='/'>Back Home</a></button>
