--- a/views/clients.erb
+++ b/views/clients.erb
@@ -1,6 +1,6 @@
-<h1> Manage Your Clients</h1>
-<br>
-<h3> Click on a client to see more details</h3>
+<h1> Manage Your Clients</h1><br>
+
+<h3> Click on a client to see more details</h3><br>
 
 <% if @clients.any?() %>
 <ul>
