--- a/views/stylists.erb
+++ b/views/stylists.erb
@@ -1,6 +1,6 @@
-<h1> Manage Your Stylists</h1>
-<br>
-<h3> Click on a stylist to see more details</h3>
+<h1> Manage Your Stylists</h1><br>
+
+<h3> Click on a stylist to see more details</h3><br>
 
 <% if @stylists.any?() %>
 <ul>
